--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <style type="text/css">
   .jumbotron {
     background-image: url(BG_bright.jpg);
+    background-size: cover;
     text-align: center;
   }
 
