Add Font Awesome icons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <!-- Font Awesome -->
+  <script src="https://use.fontawesome.com/c56c557121.js"></script>
   <title>App Landing Site</title>
   <style type="text/css">
   .jumbotron {
@@ -83,7 +85,7 @@
       <div class="card">
         <img class="card-img-top" src="surfer.jpg" alt="Card image cap">
         <div class="card-body">
-          <h4 class="card-title">Card title</h4>
+          <h4 class="card-title"><i class="fa fa-camera" aria-hidden="true"></i> Card title</h4>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
@@ -91,7 +93,7 @@
       <div class="card">
         <img class="card-img-top" src="surfer.jpg" alt="Card image cap">
         <div class="card-body">
-          <h4 class="card-title">Card title</h4>
+          <h4 class="card-title"><i class="fa fa-anchor" aria-hidden="true"></i> Card title</h4>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
@@ -99,7 +101,7 @@
       <div class="card">
         <img class="card-img-top" src="surfer.jpg" alt="Card image cap">
         <div class="card-body">
-          <h4 class="card-title">Card title</h4>
+          <h4 class="card-title"><i class="fa fa-bicycle" aria-hidden="true"></i> Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
