--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     background-image: url(BG_bright.jpg);
     background-size: cover;
     text-align: center;
+    margin-top: 50px;
   }
 
   #inner-form {
@@ -23,27 +24,44 @@
 
   #appSummary {
     text-align: center;
+    margin: 50px 0;
+  }
+
+  footer {
+    text-align: center;
+    background-color: aqua;
+    padding: 150px 0;
+    margin-top: 50px;
+  }
+
+  #last-line {
+    margin: 0;
+    padding: 0;
+  }
+
+  body {
+    position: relative;
   }
   </style>
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#navbar" data-offset="150">
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="navbar">
     <a class="navbar-brand" href="#">MyApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link" href="#jumbotron">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Download The App</a>
+          <a class="nav-link" href="#footer">Download The App</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
@@ -54,7 +72,7 @@
     </div>
   </nav>
   <!-- Jumbotron -->
-  <div class="jumbotron">
+  <div class="jumbotron" id="jumbotron">
     <h1 class="display-3">My Awesome App!</h1>
     <p class="lead">This is WHY you should download this fantastic app!</p>
     <hr class="my-4">
@@ -71,7 +89,7 @@
     </form>
   </div>
   <!-- Header for cards -->
-  <div class="container">
+  <div class="container" id="about">
     <div class="row" id="appSummary">
       <div class="col">
         <h1>Why This App Is Awesome</h1>
@@ -87,7 +105,6 @@
         <div class="card-body">
           <h4 class="card-title"><i class="fa fa-camera" aria-hidden="true"></i> Card title</h4>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
       <div class="card">
@@ -95,7 +112,6 @@
         <div class="card-body">
           <h4 class="card-title"><i class="fa fa-anchor" aria-hidden="true"></i> Card title</h4>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
       <div class="card">
@@ -103,11 +119,15 @@
         <div class="card-body">
           <h4 class="card-title"><i class="fa fa-bicycle" aria-hidden="true"></i> Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
     </div>
   </div>
+  <footer id="footer">
+    <h2>Download the app!</h2>
+    <p class="lead">Really, why should I download this app?</p>
+    <p id="last-line"><a href="#"><img src="AppStoreBadge.svg"></a></p>
+  </footer>
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
