--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>App Landing Site</title>
   <style type="text/css">
   .jumbotron {
-    background-image: url(BG_bright.jpg);
+    background-image: url("BG_bright.jpg");
     background-size: cover;
     text-align: center;
     margin-top: 50px;
